# ai-host-agent

./: .drone.yml  .env.example  .gitignore  Dockerfile  Makefile  README.md  config.yaml  docker-compose.yml  langgraph.json  pyproject.toml
.github/workflows/: cd.yml  ci.yml
ci/: Dockerfile.api-base  Dockerfile.e2e-base
ci/k8s/: preview.yaml
ci/k8s/prod/: api-deployment.yaml  api-service.yaml  configmap.yaml  namespace.yaml  postgres.yaml  redis.yaml
docs/: architecture.md
e2e/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json
e2e/fixtures/: base.fixture.ts  seed-reservations.json
e2e/helpers/: api-client.ts  evidence.ts  test-data.ts
e2e/pages/: dashboard.page.ts  floor-plan-editor.page.ts  login.page.ts
e2e/tests/: global-setup.ts
pipelines/: HOSTAI_E2E.yml
scripts/: demo.py  seed_confirmation_test.py  seed_sample_reservations.py
src/: cache.py  checkpointing.py  config.py  context_window.py  evals.py  guardrails.py  main.py  observability.py
src/agents/: graph.py  state.py  sub_agents.py
src/api/: auth.py  auth_users.py  routes.py
src/data/: floor_plan.default.json
src/models/: floor_plan.py  reservation.py
src/services/: db.py  floor_plan_service.py  lancedb_client.py  voice_tts.py
tests/: TEST_CASES.md  conftest.py
tests/integration/: test_api_integration.py
tests/unit/: test_agent.py  test_api.py  test_cache.py  test_checkpointing.py  test_config.py  test_confirmation_flow.py  test_context_window.py  test_db_persistence.py  test_evals.py  test_guardrails.py  test_infra.py  test_lancedb.py  test_multi_agent.py  test_observability.py  test_step13_api.py  test_step14_cicd.py  test_step15_demo.py
ui/: index.html  package-lock.json  package.json  tailwind.config.js
ui/src/: App.tsx  index.css  main.tsx
(+25 files in other folders)
